@@ -1,7 +1,8 @@
 2023-05-10 Dusan Jocic <dusanjocic@msn.com>
 	* [Misc] Fixed some harmless warnings
 	* [Engine] Misc fixes
-	* [RendererSystem] Move UploadCinematics code into Backend.
+	* [RendererSystem] Moved UploadCinematics code into Backend.
+	* [RendererSystem] Moved showing all the images to the screen into Backend
 
 2023-05-01 Dusan Jocic <dusanjocic@msn.com>
 	* [Misc] Updated copyright year
